# cmake_template

./: CMakeLists.txt  ReadMe.txt
CMakeModules/: Findbase_module1.cmake  Findbase_module2.cmake  Findgraphics_module1.cmake  Findgraphics_module2.cmake  Findgui_module1.cmake  Findgui_module2.cmake  ZSoftApplySetting.cmake  ZSoftGlobalSetting.cmake  ZSoftInstallModule.cmake  ZSoftMacroUtils.cmake  ZSoftPlatformDetermine.cmake
source/: CMakeLists.txt
source/applications_group/: CMakeLists.txt
source/applications_group/application_bim/: CMakeLists.txt
source/applications_group/application_bim/src/: main.cpp
source/applications_group/application_bim_qt/: CMakeLists.txt
source/applications_group/application_other/: CMakeLists.txt
source/applications_group/application_other/src/: main.cpp
source/base_group/: CMakeLists.txt
source/base_group/base_shared_module1/: CMakeLists.txt
source/base_group/base_shared_module1/inc/: base_module1_dummy_p.h
source/base_group/base_shared_module1/src/: base_module1_dummy1.cpp  base_module1_dummy2.cpp  base_module1_dummy_p.cpp
source/base_group/base_shared_module2/: CMakeLists.txt
source/base_group/base_shared_module2/inc/: base_module2_dummy_p.h
source/base_group/base_shared_module2/src/: base_module2_dummy1.cpp  base_module2_dummy2.cpp  base_module2_dummy_p.cpp
source/base_group/include/: base_module1_dummy1.h  base_module1_dummy2.h  base_module1_export.h  base_module2_dummy1.h  base_module2_dummy2.h  base_module2_export.h
source/graphics_group/: CMakeLists.txt
source/graphics_group/graphics_shared_module1/: CMakeLists.txt
source/graphics_group/graphics_shared_module1/inc/: graphics_module1_dummy_p.h
source/graphics_group/graphics_shared_module1/src/: graphics_module1_dummy1.cpp  graphics_module1_dummy2.cpp  graphics_module1_dummy_p.cpp
source/graphics_group/graphics_static_module2/: CMakeLists.txt
source/graphics_group/graphics_static_module2/inc/: graphics_module2_dummy_p.h
source/graphics_group/graphics_static_module2/src/: graphics_module2_dummy1.cpp  graphics_module2_dummy2.cpp  graphics_module2_dummy_p.cpp
source/graphics_group/include/: graphics_module1_dummy1.h  graphics_module1_dummy2.h  graphics_module1_export.h  graphics_module2_dummy1.h  graphics_module2_dummy2.h  graphics_module2_export.h
source/gui_group/: CMakeLists.txt
source/gui_group/gui_default_module2/: CMakeLists.txt
source/gui_group/gui_default_module2/inc/: gui_module2_dummy_p.h
source/gui_group/gui_default_module2/src/: gui_module2_dummy1.cpp  gui_module2_dummy2.cpp  gui_module2_dummy_p.cpp
source/gui_group/gui_shared_module1/: CMakeLists.txt
source/gui_group/gui_shared_module1/inc/: gui_module1_dummy_p.h
source/gui_group/gui_shared_module1/src/: gui_module1_dummy1.cpp  gui_module1_dummy2.cpp  gui_module1_dummy_p.cpp
source/gui_group/include/: gui_module1_dummy1.h  gui_module1_dummy2.h  gui_module1_export.h  gui_module2_dummy1.h  gui_module2_dummy2.h  gui_module2_export.h
