#######################################################################################
#
#	Copy Right : ZSoft R&D
#
#######################################################################################

ADD_SUBDIRECTORY(applications_group)
ADD_SUBDIRECTORY(base_group)
ADD_SUBDIRECTORY(graphics_group)
ADD_SUBDIRECTORY(gui_group)